# CursorNotionMvd_CommonModule

./: .gitignore  AutomotiveModule_Design.md  AutomotiveModule_Review_Guidelines.md  CMakeLists.txt  README.md  USAGE.md
examples/: main.cpp
include/Automotive/: Common.hpp  ICar.hpp  IEngine.hpp  VehicleFactory.hpp
src/: CarImpl.cpp  ElectricEngine.cpp  VehicleFactory.cpp
